volexc/tests/ui/check_duplicate_union.vol
// Duplicate union definition
union Result {
    Ok(u32) = 1;
}

union Result {
    Err(string) = 1;
}
